--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,6 @@ classifiers =
     Programming Language :: Python :: 3.10
 keywords = cryoem-services
 project_urls =
-    Documentation = https://cryoem-services.readthedocs.io/
     GitHub = https://github.com/DiamondLightSource/cryoem-services
     Bug-Tracker = https://github.com/DiamondLightSource/cryoem-services/issues
 
@@ -26,6 +25,7 @@ project_urls =
 include_package_data = True
 install_requires =
     gemmi
+    htcondor
     mrcfile
     numpy
     plotly
@@ -41,7 +41,9 @@ zip_safe = False
 
 [options.entry_points]
 workflows.services =
-    MotionCor = cryoemservices.services.motioncorr:MotionCorr
+    CTFFind = relion.zocalo.ctffind:CTFFind
+    MotionCorr = cryoemservices.services.motioncorr:MotionCorr
+    TomoAlign = relion.zocalo.tomo_align:TomoAlign
 
 [options.packages.find]
 where = src
