Add images and ispyb services

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,8 +26,12 @@ include_package_data = True
 install_requires =
     gemmi
     htcondor
+    importlib_metadata
+    ispyb
+    marshmallow-sqlalchemy
     mrcfile
     numpy
+    pillow
     plotly
     pydantic ==1.10.7
     starfile
@@ -40,10 +44,17 @@ python_requires = >=3.8
 zip_safe = False
 
 [options.entry_points]
+cryoemservices.services.images.plugins =
+    mrc_to_jpeg = cryoemservices.services.images_plugins:mrc_to_jpeg
+    picked_particles = cryoemservices.services.images_plugins:picked_particles
+    mrc_central_slice = cryoemservices.services.images_plugins:mrc_central_slice
+    mrc_to_apng = cryoemservices.services.images_plugins:mrc_to_apng
 workflows.services =
-    CTFFind = relion.zocalo.ctffind:CTFFind
+    CTFFind = cryoemservices.services.ctffind:CTFFind
+    Images = cryoemservices.services.images:Images
+    ISPyB = cryoemservices.services.ispyb:EMISPyB
     MotionCorr = cryoemservices.services.motioncorr:MotionCorr
-    TomoAlign = relion.zocalo.tomo_align:TomoAlign
+    TomoAlign = cryoemservices.services.tomo_align:TomoAlign
 
 [options.packages.find]
 where = src
