Add in the node creation service for SPA jobs

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ workflows.services =
     Images = cryoemservices.services.images:Images
     ISPyB = cryoemservices.services.ispyb:EMISPyB
     MotionCorr = cryoemservices.services.motioncorr:MotionCorr
+    NodeCreator = cryoemservices.services.node_creator:NodeCreator
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
 
 [options.packages.find]
