--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ workflows.services =
     Images = cryoemservices.services.images:Images
     ISPyB = cryoemservices.services.ispyb:EMISPyB
     MotionCorr = cryoemservices.services.motioncorr:MotionCorr
-    MotionCorrSlurm = relion.zocalo.motioncorr_slurm:MotionCorrSlurm
+    MotionCorrSlurm = cryoemservices.services.motioncorr_slurm:MotionCorrSlurm
     NodeCreator = cryoemservices.services.node_creator:NodeCreator
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
 
