Add further SPA services from python-relion: cryolo, extract and particle selection

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,11 +51,14 @@ cryoemservices.services.images.plugins =
     mrc_to_apng = cryoemservices.services.images_plugins:mrc_to_apng
 workflows.services =
     CTFFind = cryoemservices.services.ctffind:CTFFind
+    Extract = cryoemservices.services.extract:Extract
     Images = cryoemservices.services.images:Images
     ISPyB = cryoemservices.services.ispyb:EMISPyB
     MotionCorr = cryoemservices.services.motioncorr:MotionCorr
     MotionCorrSlurm = cryoemservices.services.motioncorr_slurm:MotionCorrSlurm
     NodeCreator = cryoemservices.services.node_creator:NodeCreator
+    SelectClasses = cryoemservices.services.select_classes:SelectClasses
+    SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
 
 [options.packages.find]
