--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,10 @@ python_requires = >=3.8
 zip_safe = False
 
 [options.entry_points]
+ccpem_pipeliner.jobs =
+    combine_star_files_job = cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles
+console_scripts =
+    combine_star_files = cryoemservices.pipeliner_plugins.combine_star_files:main
 cryoemservices.services.images.plugins =
     mrc_to_jpeg = cryoemservices.services.images_plugins:mrc_to_jpeg
     picked_particles = cryoemservices.services.images_plugins:picked_particles
