Add cluster submission service for slurm and further Helm charts

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,12 +48,16 @@ ccpem_pipeliner.jobs =
     combine_star_files_job = cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles
 console_scripts =
     combine_star_files = cryoemservices.pipeliner_plugins.combine_star_files:main
+cryoemservices.services.cluster.schedulers =
+    slurm = cryoemservices.services.cluster_submission:submit_to_slurm
 cryoemservices.services.images.plugins =
     mrc_to_jpeg = cryoemservices.services.images_plugins:mrc_to_jpeg
     picked_particles = cryoemservices.services.images_plugins:picked_particles
     mrc_central_slice = cryoemservices.services.images_plugins:mrc_central_slice
     mrc_to_apng = cryoemservices.services.images_plugins:mrc_to_apng
 workflows.services =
+    ClusterSubmission = cryoemservices.services.cluster_submission:ClusterSubmission
+    CrYOLO = cryoemservices.services.cryolo:CrYOLO
     CTFFind = cryoemservices.services.ctffind:CTFFind
     Extract = cryoemservices.services.extract:Extract
     Images = cryoemservices.services.images:Images
