--- a/Helm/Chart.yaml
+++ b/Helm/Chart.yaml
@@ -3,8 +3,10 @@ name: cryoem-services
 description: An umbrella Helm chart for EM processing services
 version: 0.0.1
 dependencies:
+- name: cluster_submission
 - name: cryolo
 - name: ctffind
+- name: dispatcher
 - name: extract
 - name: icebreaker
 - name: images
