--- a/Helm/values.yaml
+++ b/Helm/values.yaml
@@ -3,6 +3,22 @@ global:
   runAsUser: user-id
   runAsGroup: group-id
 
+cluster_submission:
+  replicas: 1
+  image: gcr.io/image/path
+  command: zocalo.service -s service-name -e environment
+  extraVolumes:
+  - name: home
+    hostPath:
+      path: /home
+      type: Directory
+  extraVolumeMounts:
+  - mountPath: /home
+    name: home
+    mountPropagation: HostToContainer
+    readOnly: true
+  configMap: zocalo-conf
+
 cryolo:
   replicas: 1
   image: gcr.io/image/path
@@ -20,6 +36,22 @@ cryolo:
   configMap: zocalo-conf
 
 ctffind:
+  replicas: 1
+  image: gcr.io/image/path
+  command: zocalo.service -s service-name -e environment
+  extraVolumes:
+  - name: home
+    hostPath:
+      path: /home
+      type: Directory
+  extraVolumeMounts:
+  - mountPath: /home
+    name: home
+    mountPropagation: HostToContainer
+    readOnly: true
+  configMap: zocalo-conf
+
+dispatcher:
   replicas: 1
   image: gcr.io/image/path
   command: zocalo.service -s service-name -e environment
