Add classification zocalo wrappers from python-relion

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,9 @@ workflows.services =
     SelectClasses = cryoemservices.services.select_classes:SelectClasses
     SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
+zocalo.wrappers =
+    Class2D = cryoemservices.wrappers.class2d_wrapper:Class2DWrapper
+    Class3D = cryoemservices.wrappers.class3d_wrapper:Class3DWrapper
 
 [options.packages.find]
 where = src
