--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ workflows.services =
     ClusterSubmission = cryoemservices.services.cluster_submission:ClusterSubmission
     CrYOLO = cryoemservices.services.cryolo:CrYOLO
     CTFFind = cryoemservices.services.ctffind:CTFFind
+    DenoiseIris = cryoemservices.services.denoise_iris:DenoiseIris
     Extract = cryoemservices.services.extract:Extract
     Images = cryoemservices.services.images:Images
     ISPyB = cryoemservices.services.ispyb:EMISPyB
@@ -68,6 +69,7 @@ workflows.services =
     SelectClasses = cryoemservices.services.select_classes:SelectClasses
     SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
+    TomoAlignIris = cryoemservices.services.tomo_align_iris:TomoAlignIris
 zocalo.wrappers =
     Class2D = cryoemservices.wrappers.class2d_wrapper:Class2DWrapper
     Class3D = cryoemservices.wrappers.class3d_wrapper:Class3DWrapper
