Add missed IceBreaker service name and rename slurm jobs

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,7 @@ workflows.services =
     CTFFind = cryoemservices.services.ctffind:CTFFind
     DenoiseIris = cryoemservices.services.denoise_iris:DenoiseIris
     Extract = cryoemservices.services.extract:Extract
+    IceBreaker = cryoemservices.services.icebreaker:IceBreaker
     Images = cryoemservices.services.images:Images
     ISPyB = cryoemservices.services.ispyb:EMISPyB
     MotionCorr = cryoemservices.services.motioncorr:MotionCorr
