Change icebreaker to work by function calls

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ include_package_data = True
 install_requires =
     gemmi
     htcondor
+    icebreaker-em
     importlib_metadata
     ispyb
     marshmallow-sqlalchemy
