Add services to setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,12 +65,14 @@ workflows.services =
     CTFFind = cryoemservices.services.ctffind:CTFFind
     DenoiseIris = cryoemservices.services.denoise_iris:DenoiseIris
     Extract = cryoemservices.services.extract:Extract
+    ExtractClass = cryoemservices.services.extract_class:ExtractClass
     IceBreaker = cryoemservices.services.icebreaker:IceBreaker
     Images = cryoemservices.services.images:Images
     ISPyB = cryoemservices.services.ispyb:EMISPyB
     MotionCorr = cryoemservices.services.motioncorr:MotionCorr
     MotionCorrSlurm = cryoemservices.services.motioncorr_slurm:MotionCorrSlurm
     NodeCreator = cryoemservices.services.node_creator:NodeCreator
+    PostProcess = cryoemservices.services.postprocess:PostProcess
     SelectClasses = cryoemservices.services.select_classes:SelectClasses
     SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
@@ -82,6 +84,7 @@ zocalo.services.dispatcher.ready_for_processing =
 zocalo.wrappers =
     Class2D = cryoemservices.wrappers.class2d_wrapper:Class2DWrapper
     Class3D = cryoemservices.wrappers.class3d_wrapper:Class3DWrapper
+    Refine3D = cryoemservices.wrappers.refine3d_wrapper:Refine3D
 
 [options.packages.find]
 where = src
