Add a service that sets up the bfactor runs

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ cryoemservices.services.images.plugins =
     mrc_central_slice = cryoemservices.services.images_plugins:mrc_central_slice
     mrc_to_apng = cryoemservices.services.images_plugins:mrc_to_apng
 workflows.services =
+    BFactor = cryoemservices.services.bfactor_setup:BFactor
     ClusterSubmission = cryoemservices.services.cluster_submission:ClusterSubmission
     CrYOLO = cryoemservices.services.cryolo:CrYOLO
     CTFFind = cryoemservices.services.ctffind:CTFFind
