Add bits from dlstbx needed for the dispatcher to find ispyb visits

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,10 @@ workflows.services =
     SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
     TomoAlignIris = cryoemservices.services.tomo_align_iris:TomoAlignIris
+zocalo.services.dispatcher.filters =
+    ispyb = cryoemservices.util.dispatcher_tools:ispyb_filter
+zocalo.services.dispatcher.ready_for_processing =
+    ispyb = cryoemservices.util.dispatcher_tools:ready_for_processing
 zocalo.wrappers =
     Class2D = cryoemservices.wrappers.class2d_wrapper:Class2DWrapper
     Class3D = cryoemservices.wrappers.class3d_wrapper:Class3DWrapper
