Minor fixes for bfactor runs

--- a/setup.cfg
+++ b/setup.cfg
@@ -85,7 +85,7 @@ zocalo.services.dispatcher.ready_for_processing =
 zocalo.wrappers =
     Class2D = cryoemservices.wrappers.class2d_wrapper:Class2DWrapper
     Class3D = cryoemservices.wrappers.class3d_wrapper:Class3DWrapper
-    Refine3D = cryoemservices.wrappers.refine3d_wrapper:Refine3D
+    Refine3D = cryoemservices.wrappers.refine3d_wrapper:Refine3DWrapper
 
 [options.packages.find]
 where = src
