--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,7 @@ workflows.services =
     IceBreaker = cryoemservices.services.icebreaker:IceBreaker
     Images = cryoemservices.services.images:Images
     ISPyB = cryoemservices.services.ispyb:EMISPyB
+    MonitorRefine = cryoemservices.services.monitor_refines:MonitorRefine
     MotionCorr = cryoemservices.services.motioncorr:MotionCorr
     MotionCorrSlurm = cryoemservices.services.motioncorr_slurm:MotionCorrSlurm
     NodeCreator = cryoemservices.services.node_creator:NodeCreator
