--- a/Helm/Chart.yaml
+++ b/Helm/Chart.yaml
@@ -14,6 +14,7 @@ dependencies:
 - name: icebreaker
 - name: images
 - name: ispyb
+- name: monitor_refine
 - name: motioncorr
 - name: motioncorr_slurm
 - name: node_creator
