--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,7 @@ workflows.services =
     MotionCorrSlurm = cryoemservices.services.motioncorr_slurm:MotionCorrSlurm
     NodeCreator = cryoemservices.services.node_creator:NodeCreator
     PostProcess = cryoemservices.services.postprocess:PostProcess
+    ReExtract = cryoemservices.services.reextract.ReExtract
     SelectClasses = cryoemservices.services.select_classes:SelectClasses
     SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
