Command line tool to resubmit failed wrapper scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ ccpem_pipeliner.jobs =
     combine_star_files_job = cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles
 console_scripts =
     combine_star_files = cryoemservices.pipeliner_plugins.combine_star_files:main
+    cryoemservices.resubmit_wrapper = cryoemservices.cli.resubmit_wrapper:run
 cryoemservices.services.cluster.schedulers =
     slurm = cryoemservices.services.cluster_submission:submit_to_slurm
 cryoemservices.services.images.plugins =
