Correct readme file name

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = cryoemservices
 version = 0.1.1
 description = Services for CryoEM processing
-long_description = file: README.rst
+long_description = file: README.md
 author = Diamond Light Source - Data Analysis et al.
 author_email = dataanalysis@diamond.ac.uk
 license = BSD 3-Clause
