--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = cryoemservices
 version = 0.1.2
 description = Services for CryoEM processing
 long_description = file: README.md
+long_description_content_type = text/markdown
 author = Diamond Light Source - Data Analysis et al.
 author_email = dataanalysis@diamond.ac.uk
 license = BSD 3-Clause
