Corrections to setup and publishing

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,8 @@ license = BSD 3-Clause
 license_files = LICENSE
 classifiers =
     Development Status :: 3 - Alpha
-    Intended Audience :: Developers
-    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD Licence
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
