--- a/.github/workflows/publish-to-pypi.yaml
+++ b/.github/workflows/publish-to-pypi.yaml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/cryoem-services
+      url: https://pypi.org/p/cryoemservices
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
