--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ license_files = LICENSE
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Science/Research
-    License :: OSI Approved :: BSD Licence
+    License :: OSI Approved :: BSD License
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
