Adjust reextraction to submit to slurm

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ ccpem_pipeliner.jobs =
     combine_star_files_job = cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles
 console_scripts =
     combine_star_files = cryoemservices.pipeliner_plugins.combine_star_files:main
+    cryoemservices.reextract = cryoemservices.pipeliner_plugins.reextract:run
     cryoemservices.resubmit_wrapper = cryoemservices.cli.resubmit_wrapper:run
 cryoemservices.services.cluster.schedulers =
     slurm = cryoemservices.services.cluster_submission:submit_to_slurm
@@ -75,7 +76,6 @@ workflows.services =
     MotionCorrSlurm = cryoemservices.services.motioncorr_slurm:MotionCorrSlurm
     NodeCreator = cryoemservices.services.node_creator:NodeCreator
     PostProcess = cryoemservices.services.postprocess:PostProcess
-    ReExtract = cryoemservices.services.reextract:ReExtract
     SelectClasses = cryoemservices.services.select_classes:SelectClasses
     SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
