Add plotting of healpix distribution to 3d wrapper

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ project_urls =
 include_package_data = True
 install_requires =
     gemmi
+    healpy
     htcondor
     icebreaker-em
     importlib_metadata
