Upgrade the supported version of gemmi

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ project_urls =
 [options]
 include_package_data = True
 install_requires =
-    gemmi
+    gemmi ==0.6.5
     healpy
     htcondor
     icebreaker-em
