--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ ccpem_pipeliner.jobs =
     combine_star_files_job = cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles
 console_scripts =
     combine_star_files = cryoemservices.pipeliner_plugins.combine_star_files:main
+    cryoemservices.reextract = cryoemservices.pipeliner_plugins.reextract:run
     cryoemservices.resubmit_wrapper = cryoemservices.cli.resubmit_wrapper:run
 cryoemservices.services.cluster.schedulers =
     slurm = cryoemservices.services.cluster_submission:submit_to_slurm
@@ -60,17 +61,20 @@ cryoemservices.services.images.plugins =
     mrc_central_slice = cryoemservices.services.images_plugins:mrc_central_slice
     mrc_to_apng = cryoemservices.services.images_plugins:mrc_to_apng
 workflows.services =
+    BFactor = cryoemservices.services.bfactor_setup:BFactor
     ClusterSubmission = cryoemservices.services.cluster_submission:ClusterSubmission
     CrYOLO = cryoemservices.services.cryolo:CrYOLO
     CTFFind = cryoemservices.services.ctffind:CTFFind
     DenoiseIris = cryoemservices.services.denoise_iris:DenoiseIris
     Extract = cryoemservices.services.extract:Extract
+    ExtractClass = cryoemservices.services.extract_class:ExtractClass
     IceBreaker = cryoemservices.services.icebreaker:IceBreaker
     Images = cryoemservices.services.images:Images
     ISPyB = cryoemservices.services.ispyb:EMISPyB
     MotionCorr = cryoemservices.services.motioncorr:MotionCorr
     MotionCorrSlurm = cryoemservices.services.motioncorr_slurm:MotionCorrSlurm
     NodeCreator = cryoemservices.services.node_creator:NodeCreator
+    PostProcess = cryoemservices.services.postprocess:PostProcess
     SelectClasses = cryoemservices.services.select_classes:SelectClasses
     SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
@@ -82,6 +86,7 @@ zocalo.services.dispatcher.ready_for_processing =
 zocalo.wrappers =
     Class2D = cryoemservices.wrappers.class2d_wrapper:Class2DWrapper
     Class3D = cryoemservices.wrappers.class3d_wrapper:Class3DWrapper
+    Refine3D = cryoemservices.wrappers.refine3d_wrapper:Refine3DWrapper
 
 [options.packages.find]
 where = src
