Change from tomo_align_iris to tomo_align_slurm

--- a/Helm/Chart.yaml
+++ b/Helm/Chart.yaml
@@ -21,4 +21,4 @@ dependencies:
 - name: select_classes
 - name: select_particles
 - name: tomo_align
-- name: tomo_align_iris
+- name: tomo_align_slurm
