--- a/setup.cfg
+++ b/setup.cfg
@@ -79,7 +79,7 @@ workflows.services =
     SelectClasses = cryoemservices.services.select_classes:SelectClasses
     SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
-    TomoAlignIris = cryoemservices.services.tomo_align_iris:TomoAlignIris
+    TomoAlignSlurm = cryoemservices.services.tomo_align_slurm:TomoAlignSlurm
 zocalo.services.dispatcher.filters =
     ispyb = cryoemservices.util.dispatcher_tools:ispyb_filter
 zocalo.services.dispatcher.ready_for_processing =
