--- a/Helm/Chart.yaml
+++ b/Helm/Chart.yaml
@@ -7,7 +7,7 @@ dependencies:
 - name: cluster_submission
 - name: cryolo
 - name: ctffind
-- name: denoise_iris
+- name: denoise_slurm
 - name: dispatcher
 - name: extract
 - name: extract_class
