Set specific versions of dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,8 +38,9 @@ install_requires =
     plotly
     pydantic ==1.10.7
     starfile
+    stomp-py ==8.1.0
     workflows
-    zocalo
+    zocalo ==0.30.2
 packages = find:
 package_dir =
     =src
