--- a/Helm/charts/denoise_slurm/templates/deployment.yaml
+++ b/Helm/charts/denoise_slurm/templates/deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tomo-align-iris
+  name: denoise-slurm
   namespace: {{ .Values.global.namespace }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      app: tomo-align-iris
+      app: denoise-slurm
   template:
     metadata:
       labels:
-        app: tomo-align-iris
+        app: denoise-slurm
     spec:
       securityContext:
         runAsUser: {{ .Values.global.runAsUser }}
         runAsGroup: {{ .Values.global.runAsGroup }}
       containers:
-      - name: tomo-align-iris-runner
+      - name: denoise-slurm-runner
         image: {{ .Values.image }}
         imagePullPolicy: Always
         resources:
@@ -27,7 +27,7 @@ spec:
             cpu: {{ .Values.cpuLimit }}
             memory: {{ .Values.memoryLimit }}
         command: ["/bin/sh"]
-        args: 
+        args:
           - -c
           - >-
               {{ .Values.command }}
@@ -38,12 +38,6 @@ spec:
           value: "/zocalo/config/{{ .Values.configFileName }}"
         - name: ISPYB_CREDENTIALS
           value: "/zocalo/secrets/{{ .Values.dbFileName }}"
-        - name: LD_LIBRARY_PATH
-          value: "/IMOD/4.11.1/IMOD/lib:/IMOD/4.11.1/IMOD/qtlib"
-        - name: IMOD_DIR
-          value: "/IMOD/4.11.1/IMOD"
-        - name: CONDOR_CONFIG
-          value: "ONLY_ENV"
         volumeMounts:
         - name: config-file
           mountPath: /zocalo/config
@@ -74,16 +68,16 @@ spec:
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
-  name: tomo-align-iris
+  name: denoise-slurm
   namespace: {{ .Values.global.namespace }}
 spec:
   scaleTargetRef:
-    name: tomo-align-iris
+    name: denoise-slurm
   triggers:
     - type: rabbitmq
       metadata:
         host: {{ .Values.global.rmqHost }}
-        queueName: tomo_align
+        queueName: denoise
         mode: QueueLength
         value: "{{ .Values.queueLengthTrigger }}"
   minReplicaCount: {{ .Values.minReplicaCount }}
