--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,6 @@ include_package_data = True
 install_requires =
     gemmi ==0.6.5
     healpy
-    htcondor
     icebreaker-em
     importlib_metadata
     ispyb
@@ -66,7 +65,7 @@ workflows.services =
     ClusterSubmission = cryoemservices.services.cluster_submission:ClusterSubmission
     CrYOLO = cryoemservices.services.cryolo:CrYOLO
     CTFFind = cryoemservices.services.ctffind:CTFFind
-    DenoiseIris = cryoemservices.services.denoise_iris:DenoiseIris
+    DenoiseSlurm = cryoemservices.services.denoise_slurm:DenoiseSlurm
     Extract = cryoemservices.services.extract:Extract
     ExtractClass = cryoemservices.services.extract_class:ExtractClass
     IceBreaker = cryoemservices.services.icebreaker:IceBreaker
@@ -79,7 +78,7 @@ workflows.services =
     SelectClasses = cryoemservices.services.select_classes:SelectClasses
     SelectParticles = cryoemservices.services.select_particles:SelectParticles
     TomoAlign = cryoemservices.services.tomo_align:TomoAlign
-    TomoAlignIris = cryoemservices.services.tomo_align_iris:TomoAlignIris
+    TomoAlignSlurm = cryoemservices.services.tomo_align_slurm:TomoAlignSlurm
 zocalo.services.dispatcher.filters =
     ispyb = cryoemservices.util.dispatcher_tools:ispyb_filter
 zocalo.services.dispatcher.ready_for_processing =
