--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -24,6 +24,13 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          pip install pytest pytest-mock pytest-datafiles
+          pip install .
+      - name: Test with pytest
+        run: |
+          pytest tests
       - name: Install pypa/build
         run: >-
           python3 -m
@@ -37,13 +44,6 @@ jobs:
         with:
           name: python-package-distributions
           path: dist/
-      - name: Install dependencies
-        run: |
-          pip install pytest
-          pip install .
-      - name: Test with pytest
-        run: |
-          pytest tests
 
   publish-to-pypi:
     name: >-
