Put memseg in setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,6 +71,7 @@ workflows.services =
     IceBreaker = cryoemservices.services.icebreaker:IceBreaker
     Images = cryoemservices.services.images:Images
     ISPyB = cryoemservices.services.ispyb:EMISPyB
+    MembrainSeg = cryoemservices.services.membrain_seg:MembrainSeg
     MotionCorr = cryoemservices.services.motioncorr:MotionCorr
     MotionCorrSlurm = cryoemservices.services.motioncorr_slurm:MotionCorrSlurm
     NodeCreator = cryoemservices.services.node_creator:NodeCreator
